py-pitop-sdk (0.14.0) buster; urgency=medium

  * Buttons can only be used by a single process

 -- Jorge Capona <jorge@pi-top.com>  Mon, 25 Jan 2021 16:17:48 -0300

py-pitop-sdk (0.13.3) buster; urgency=medium

  * Convert image to array before checking dimensional size for RGB conversion

 -- Mike Roberts <mike@pi-top.com>  Sun, 24 Jan 2021 23:02:20 +0000

py-pitop-sdk (0.13.2) buster; urgency=medium

  * Use 'ImageFunctions' to handle all image conversion
  * Clarify when/why it is able to do channel conversion

 -- Mike Roberts <mike@pi-top.com>  Sun, 24 Jan 2021 22:47:52 +0000

py-pitop-sdk (0.13.1) buster; urgency=medium

  * Set line detector default image format to 'PIL'

 -- Jorge Capona <jorge@pi-top.com>  Sun, 24 Jan 2021 18:28:38 -0300

py-pitop-sdk (0.13.0) buster; urgency=medium

  * Add initial 'PiTop' and 'RobotAlex' top-level objects
  * Support line-following with 'RobotAlex'
  * Add ImageFunctions module in pitop.core for globally useful functions
  * Camera now manages its format as a property. Deprecated format parameter
  in functions

 -- Jorge Capona <jorge@pi-top.com>  Sat, 23 Jan 2021 19:06:04 -0300

py-pitop-sdk (0.12.1) buster; urgency=medium

  * Fix broken reference to OLED's internal canvas

 -- Mike Roberts <mike@pi-top.com>  Mon, 18 Jan 2021 16:40:22 +0000

py-pitop-sdk (0.12.0) buster; urgency=medium

  * Use common lib singleton metaclass
  * Upgrade on installing from docs/requirements.txt
  * Clean up battery component
  * Always use 2 leading underscores for private functions and member variables
  * Fix motor examples to match robot configuration ports and params
  * Fix changelog formatting

 -- Mike Roberts <mike@pi-top.com>  Mon, 18 Jan 2021 16:25:11 +0000

py-pitop-sdk (0.11.0) buster; urgency=medium

  * Monitor OLED lock files using inotify to add events for user using the OLED
  * Improve miniscreen button importing to speed miniscreen imports
  * Handle Ctrl+C in OLED CLI